@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.5.3
+VERSION=1.5.5
 
-DEPENDENCY="zeda=1.2.25;zm=1.2.19"
+DEPENDENCY="zeda=1.2.30;zm=1.2.19"
